fixing center align for main

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ html, body {
     font-weight: 400;
     line-height: 1.8;
     align-self: center;
-    align-items: center;
 }
 
 div {
@@ -27,7 +26,11 @@ div {
 main {
     background-color: hsl(0, 0%, 100%);
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
+    max-width: 50%;
+    border-radius: 20px;
+    padding: 3%;
+    margin: 8% auto; /* Centers the box horizontally */
 }
 
 img {
@@ -89,6 +92,8 @@ table {
     border-collapse: collapse;
     text-align: center;
     width: 100%;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 table strong {
@@ -117,6 +122,7 @@ tr + tr {
 {
     body, main {
         margin: 0;
+        padding-bottom: 0;
     }
 
     main .no-padding {
@@ -138,7 +144,7 @@ tr + tr {
 {
     main {
         max-width: 50%;
-        justify-self: center;
+        align-self: center;
         border-radius: 20px;
         padding: 3%;
         margin-top: 8%;
